--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js --config nodemon.json"
   },
   "author": "RainJoy <1490079545@qq.com>",
   "license": "MIT",
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/zhouyu1993/wechaty-demo#readme",
   "dependencies": {
+    "file-box": "^0.8.27",
     "moment": "^2.24.0",
     "qrcode-terminal": "^0.12.0",
     "wechaty": "^0.22.6"
